# icg

./: .gitignore  README.md  flake.nix
Impressionist/: CMakeLists.txt  README.md  fltk_hello.cpp
Impressionist/include/: impressionistDoc.h  mac_fixes.h  originalView.h  paintView.h
Impressionist/src/: impressionist.h  scatteredPointBrush.cpp
Modeler/: CMakeLists.txt  README.md
Modeler/include/: mac_fixes.h  model.h  point.h
RayTracer/: CMakeLists.txt  README.md
RayTracer/include/: mac_fixes.h
RayTracer/include/ui/: TraceGLWindow.h
RayTracer/include/vecmath/: vec.h
RayTracer/src/ui/: ModelerCamera.cpp  debuggingView.cpp  glObjects.cpp
